--- a/src/EHRSystem.Web/appsettings.json
+++ b/src/EHRSystem.Web/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "EHRDatabase": "Server=(localdb)\\mssqllocaldb;Database=EHRSystem;Trusted_Connection=True;"
+    "EHRDatabase": "Server=(localdb)\\mssqllocaldb;Database=EHRSystem;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "Identity": {
     "Password": {
